<resources>
    <string name="app_name">Gomoku8</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start</string>
    <string name="start_screen_title">GOMOKU</string>
    <string name="new_game">New Game</string>
    <string name="num_players">Players</string>
    <string name="board_size">Board Size</string>
    <string name="mode_type">Game Mode</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="num_rounds">Rounds</string>
    <string name="next_round">Next Round</string>
    <string name="initialRecord">White 0:0 Black</string>

    <string name="single">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="outOfnum">out of</string>
    <string name="start_game_online">Play Online</string>
    <string name="size10">10x10</string>
    <string name="size15">15x15</string>
    <string name="size20">20x20</string>
    <string name="standard_mode">Standard</string>
    <string name="freestyle_mode">Freestyle</string>
    <string name="how_to">How to Play</string>
    <string name="title_activity_board_screen">BoardScreen</string>
    <string name="game_rules">
        Gomoku is a two-player board game. Each player has a type
        of stone, black or white. In each turn, a player places a
        stone at a corner in the board. The winner must have a line
        of first five adjacent stones vertically, horizontally, or
        diagonally. This line must not be blocked at both ends.
        The edge of the board is considered as a blocked end. In
        standard mode, a line of six  or  more  adjacent stones does
        not count. In freestyle mode, a line of six or more adjacent
        stones is allowed.
    </string>
    <string name="rematch">Rematch</string>
    <string name="exit">Quit</string>
    <string name="menu">Menu</string>
    <string name="end">Game Finished</string>
    <string name="timerText">Time: </string>
    <string name="timer">00:00</string>
    <string name="timer1">Player 1 : 00:00</string>
    <string name="timer2">Player 2 : 00:00</string>

    <string name="title_activity_online_board">OnlineBoard</string>

    <string name="PlayerTurn">Player 1</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
</resources>
