<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_start_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.isho.gomoku8.ChooseStartOptions"
    android:background="@drawable/woodfloor"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                    android:text="@string/num_players"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:id="@+id/textView"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="1" />

            <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />

            <RadioButton
                android:text="RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
                android:text="@string/board_size"
                android:layout_width="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/textView2"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="?android:attr/textColorPrimary" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton2"
                android:padding="20dp"
                android:textSize="18sp"
                android:textOn="@string/size20"
                android:textOff="@string/size10" />


            <TextView
                android:text="@string/mode_type"
                android:layout_width="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/textView3"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="?android:attr/textColorPrimary" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3"
                android:padding="20dp"
                android:textSize="18sp"
                android:textOff="@string/standard_mode"
                android:textOn="@string/freestyle_mode" />


        <Button
                android:text="@string/start_game"
                android:id="@+id/StartGameButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:onClick="NewGame"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
