<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.isho.gomoku8.BoardScreen"
    android:background="@drawable/wood">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorControlHighlight"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="32dp"
        android:paddingTop="25dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/currentPlayerImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Player1"
            android:src="@drawable/white" />

        <TextView
            android:id="@+id/currentPlayerTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:paddingEnd="30dp"
            android:paddingStart="10dp"
            android:text="@string/Player1"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/RoundView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/RoundCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/outOfnum"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/WinRecorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/RoundCounter"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/initialRecord"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/boardGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/boardView"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:gravity="center"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorControlHighlight"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="10dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:padding="15dp">
            <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            android:text="@string/timerText"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
-->
            <Chronometer
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="end"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/timer1"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/timer2"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
